--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,7 +17,13 @@
   </div>
 
   <div class="field">
-    <%= form.file_field :images, multiple: true, direct_upload: true %>
+    <%= form.label :avatar %>
+    <%= form.file_field :avatar, direct_upload: false %>
+  </div>
+
+  <div class="field">
+    <%= form.label :images %>
+    <%= form.file_field :images, multiple: true, direct_upload: false %>
   </div>
 
   <div class="actions">
