Add footer with navigation and resource links.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,4 +12,13 @@
   <body>
     <%= yield %>
   </body>
+
+  <hr>
+  <small>
+    <%= link_to 'Users', users_path %> |
+    <%= link_to 'Posts', posts_path %> |
+    <%= link_to 'IU1 Workshop GitHub Projects', 'https://github.com/pateljj04/iu1workshop' %> |
+    <%= link_to 'IU1 Workshop Resources', 'https://stem.tiu11.org/workshops/pi-workshop-iu1/' %> |
+    <%= link_to 'stem.tiu11.org', 'https://stem.tiu11.org/' %>
+  </small>
 </html>
